Add Apple auth verification and server-side user profile anchor - Verify Sign in with Apple identity tokens (JWT) on all /v1 endpoints - Add auth middleware deriving identity from verified Apple sub - Introduce users and user_profiles tables as global identity anchor - Bootstrap user/profile records on first authenticated request - Require Authorization: Bearer <identityTokenJWT> for generation and validation - Add Postgres wiring and dependencies (pg, jose)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.2.1",
-    "openai": "^4.0.0"
-  }
+  "express": "^5.2.1",
+  "openai": "^4.0.0",
+  "jose": "^5.2.4",
+  "pg": "^8.11.5"
+}
 }
