--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-  "express": "^5.2.1",
-  "openai": "^4.0.0",
-  "jose": "^5.2.4",
-  "pg": "^8.11.5"
-}
+    "express": "^5.2.1",
+    "openai": "^4.0.0",
+    "jose": "^5.2.4",
+    "pg": "^8.11.5",
+    "@aws-sdk/client-s3": "^3.0.0",
+    "@aws-sdk/s3-request-presigner": "^3.0.0",
+    "multer": "^1.4.5-lts.1"
+  }
 }
